# playwrightauthor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.poml  DEPENDENCIES.md  PLAN.md  README.md  SYNC_ASYNC_GUIDE.md  TODO.md  TODO_QUALITY.md  WORK.md  accessibility-report.md  llms.txt  llms_tldr.txt  md.txt  publish.sh  pyproject.toml  test.sh
.github/workflows/: accessibility-check.yml  ci.yml  docs-build.yml  link-check.yml
.omc/: project-memory.json
.omc/sessions/: 653e27ec-e334-45ab-ba9d-3ab6e3d2a44d.json
.sisyphus/run-continuation/: ses_17fd3a829ffeQg3VECNHHFObta.json
_github/workflows/: ci.yml  docs.yml
docs/: 01-browser-engines.md  02-auth-overview.md  03-auth-gmail.md  04-auth-github.md  05-auth-linkedin.md  06-auth-troubleshooting.md  07-architecture-overview.md  08-architecture-lifecycle.md  09-architecture-components.md  10-architecture-errors.md  11-platform-overview.md  12-platform-macos.md  13-platform-windows.md  14-platform-linux.md  15-performance-overview.md  16-performance-memory.md  17-performance-pooling.md  18-performance-monitoring.md  Gemfile  _config.yml  architecture.md  cli.md  index.md  installation.md  profiles.md  python-api.md  troubleshooting.md
docs/architecture/: browser-lifecycle.md  components.md  error-handling.md  index.md
docs/auth/: github.md  gmail.md  index.md  linkedin.md  troubleshooting.md
docs/performance/: connection-pooling.md  index.md  memory-management.md  monitoring.md
examples/: README.md  example_adaptive_timing.py  example_extraction_fallbacks.py  example_html_to_markdown.py  example_scroll_infinite.py  google_flow.py  scrape_github_notifications.py  scrape_linkedin_feed.py
examples/fastapi/: README.md
examples/pytest/: README.md  conftest.py  test_async.py  test_authentication.py  test_basic.py
old/: google_docs_scraper_simple.py  playwrightauthor.md
playwrightauthor/: __init__.py  __main__.py  author.py  exceptions.py  typing.py
playwrightauthor/browser/: finder.py  launcher.py  process.py
playwrightauthor/utils/: logger.py
scripts/: check_accessibility.py  check_links.py
src/playwrightauthor/: __init__.py  __main__.py  author.py  browser_manager.py  cli.py  config.py  connection.py  dialognano.py  engine.py  exceptions.py  lazy_imports.py  monitoring.py  onboarding.py  state_manager.py
src_docs/: mkdocs.yml
src_docs/md/: advanced-features.md  api-reference.md  authentication.md  basic-usage.md  browser-management.md  (+5 more)
tests/: test_author.py  test_benchmark.py  test_cli.py  test_dialognano.py  test_doctests.py  test_engines.py  test_helpers_extraction.py  test_helpers_interaction.py  test_helpers_timing.py  test_integration.py  test_platform_specific.py  test_utils.py  test_utils_html.py
(+20 files in other folders)
