[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwrightauthor"
version = "0.1.0"
authors = [
    { name = "Adam Twardoch", email = "adam+github@twardoch.com" },
]
description = "Your personal, authenticated browser for Playwright, ready in one line of code."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "rich",
    "fire",
    "loguru",
    "platformdirs",
    "requests",
    "psutil",
]

[project.urls]
"Homepage" = "https://github.com/twardoch/playwrightauthor"
"Bug Tracker" = "https://github.com/twardoch/playwrightauthor/issues"

[project.scripts]
playwrightauthor = "playwrightauthor.cli:main"
